# cmake-modules

./: CMakeLists.txt  CMakePresets.json  README.md
cmake/: LibCXX.cmake  StandardModulesHacks.cmake
cmake/toolchains/: clang16-linux.cmake
tests/: CMakeLists.txt  hello.cpp
util/: CMakeLists.txt  util.cpp
